Updated to 6.0.0-rc.2